# shortty

./: Cargo.toml  README.md
migrations/: 001_create_urls_table.sql
src/: config.rs  db.rs  error.rs  main.rs  state.rs
src/routes/: health.rs  mod.rs  redirect.rs  shorten.rs
src/utils/: connect_db.rs  create_hash.rs  mod.rs  validate_url.rs
